--- a/css/strip.css
+++ b/css/strip.css
@@ -1,4 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Anonymous+Pro:400,700);
 body {
     padding: 30px 0 0;
     border-top: 3px solid #D84A38;
@@ -390,5 +389,8 @@ pre.code-big, pre.code-big *{
 }
 .marketing-img {
     max-height: 400px;
+}
+.by-hopsoft {
+    opacity: 0.3;
 }
 
