--- a/lib/model_probe/templates/model.rb.erb
+++ b/lib/model_probe/templates/model.rb.erb
@@ -5,6 +5,8 @@ class <%= name -%> < <%= superclass_name %>
 
   # includes .................................................................................................
 
+  # constants ................................................................................................
+
   # class methods ............................................................................................
   class << self
   end
@@ -13,8 +15,6 @@ class <%= name -%> < <%= superclass_name %>
 <% foreign_key_columns.each do |column| -%>
   <%= "belongs_to :#{column.name.sub(/_id\z/, "")}" %>
 <% end -%>
-
-  # additional config (accepts_nested_attribute_for, etc.) ...................................................
 
   # validations ..............................................................................................
 <% validation_columns.each do |column| -%>
@@ -25,6 +25,8 @@ class <%= name -%> < <%= superclass_name %>
   # callbacks (caution: triggers side effects) ...............................................................
 
   # scopes (composable db queries) ...........................................................................
+
+  # additional config (accepts_nested_attribute_for, etc.) ...................................................
 
   # public instance methods ..................................................................................
 
