Update the template for class def

--- a/lib/model_probe/templates/model.rb.erb
+++ b/lib/model_probe/templates/model.rb.erb
@@ -22,9 +22,9 @@ class <%= name -%> < <%= superclass_name %>
   <%= "validates :#{column.name}, length: { maximum: #{column.limit} }" if limit_columns.include?(column) %>
 <% end -%>
 
-  # callbacks (caution: triggers side effects) ...............................................................
+  # callbacks (caution: side effects) ........................................................................
 
-  # scopes (composable db queries) ...........................................................................
+  # scopes (composable queries) ..............................................................................
 
   # additional config (accepts_nested_attribute_for, etc.) ...................................................
 
