--- a/lib/model_probe/templates/fixture.yml.erb
+++ b/lib/model_probe/templates/fixture.yml.erb
@@ -1,4 +1,4 @@
 <%= name.underscore %>_fixture:
 <% fixture_columns.each do |column| -%>
-  <%= column.name.underscore %>: <%= column&.default || fixture_values_by_type[column.type] %>
+  <%= column.name.underscore %>: <%= column&.default || column.type %>
 <% end -%>
